updated contents HTML

--- a/index.html
+++ b/index.html
@@ -4,7 +4,35 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>JLKennard's Travel Agency</title>
   </head>
-  <body></body>
+  <body>
+    <h1>JLKennard's Travel Agency Blog</h1>
+    <h2>Want to see the world?</h2>
+    <p>
+      Our Travel Agents will get you where you want to go, when you want to go,
+      for the price you want to pay!
+    </p>
+
+    <h3>The Caribbean</h3>
+    <ul>
+      We can book a holiday to these Caribbean destinations:
+      <li>Jamaica</li>
+      <li>Grenada</li>
+      <li>Trinidad and Tobago</li>
+      <li>Barbados</li>
+      <li>Aruba</li>
+      <li>Saint Lucia</li>
+    </ul>
+
+    <p>This Months Spotlight: Jamaica</p>
+    <ol>
+      Top five things to do in Jamaica:
+      <li>Dunn's River Falls and Park</li>
+      <li>Blue Hole</li>
+      <li>Club Mobay Departure Lounge</li>
+      <li>Seven Mile Beach</li>
+      <li>YS Falls</li>
+    </ol>
+  </body>
 </html>
